<resources>
    <string name="app_name" translatable="false">Management Company</string>
    <string name="app_version">Version: %s</string>

    <!-- WelcomeFragment -->
    <string name="welcome_message">Welcome to\n%s</string>
    <string name="enter">Enter</string>
    <string name="get_credentials">Get credentials</string>
    <string name="demo_version">Demo version</string>
    <string name="copyright">Disclaimer, copyright</string>

    <!-- GetCredentialsFragment -->
    <string name="get_credentials_info">Contact Management Company to get credentials. You can see working hours %s</string>
    <string name="here">here</string>
    <string name="get_credentials_schedule_url" translatable="false">https://www.google.com/</string>
    <string name="back">Back</string>

    <!-- LoginFragment -->
    <string name="login">Login</string>
    <string name="login_hint">Enter login</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="privacy_policy_confirm">I agree to Privacy Policy…</string>
    <string name="policy">Privacy Policy</string>
    <string name="conditions">Conditions</string>
    <string name="privacy_policy_confirm_2">I confirm that I agree with %s and %s of confidentiality</string>
    <string name="login_input_empty">Please enter login and password</string>
    <string name="privacy_policy_confirm_error">Accept Privacy Policy to continue using application</string>
    <string name="privacy_policy_url" translatable="false">https://www.google.com/</string>
    <string name="confidentiality_url" translatable="false">https://www.google.com/</string>

    <!-- HomeFragment -->
    <string name="choose_section">Choose section</string>
    <string name="management_company_requests">Management company requests</string>
    <string name="pass_order">Pass order</string>
    <string name="payments">Payments</string>

    <!-- Requests fragment -->
    <string name="write_feedback">Feedback</string>
    <string name="order_service">Order service</string>
    <string name="requests_history">Requests history</string>
    <string name="requests_empty">No requests</string>
    <string name="request_number">Feedback # %s</string>
    <string name="request_status">Request status:</string>
    <string name="request_status_new">new</string>
    <string name="request_status_on_review">on review</string>
    <string name="request_status_complete">complete</string>
    <string name="load_request_history_error">Error loading request history</string>

    <!-- Feedback fragment -->
    <string name="new_feedback">New feedback</string>
    <string name="feedback_title">Feedback title</string>
    <string name="feedback_hint">Enter your feedback</string>
    <string name="add_files">Attach up to 5 files:</string>
    <string name="send">Send</string>
    <string name="feedback_empty_error">Title or content is empty</string>
    <string name="success">Success</string>
    <string name="feedback_send_success">Feedback sent successfully</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="add_file_error">Add file error</string>
    <string name="max_files_error">Already added maximum number of files</string>
    <string name="ok" translatable="false">OK</string>

    <!-- Service fragment -->
    <string name="get_service">Get service</string>
    <string name="choose_service">Choose service</string>
    <string name="choose_service_error">Choose service</string>
    <string name="write_comment_hint">Leave your comment</string>
    <string name="plumber">Plumber</string>
    <string name="electrician">Electrician</string>
    <string name="carpenter">Carpenter</string>
    <string name="other">Other</string>
    <string name="close">Close</string>
    <string name="service">Service</string>
    <string name="service_request_send_success">Service request sent successfully</string>
    <string name="choose">Choose…</string>

    <!-- Security fragment -->
    <string name="person_pass">Visitor pass</string>
    <string name="car_pass">Car pass</string>
    <string name="access_type">Access type</string>
    <string name="access_type_apartment">Apartment access</string>
    <string name="access_type_lobby">Lobby access</string>
    <string name="access_type_territory">Territory access</string>
    <string name="access_type_guest_parking">Guest parking access</string>
    <string name="pass_type_one_time">One time pass</string>
    <string name="pass_type_day">Day pass, more than 1 entrance</string>

    <!-- Person pass fragment -->
    <string name="get_person_pass">Order visitor pass</string>
    <string name="visitor_name">Visitor name</string>
    <string name="visit_date">Visit date</string>
    <string name="pass_type">Pass type</string>
    <string name="guest_name_empty_error">Please enter guest name</string>
    <string name="pass_date_empty_error">Please select visit date</string>
    <string name="access_type_empty_error">Please select access type</string>

    <!-- Car pass fragment -->
    <string name="get_car_pass">Order car pass</string>
    <string name="car_model">Car model</string>
    <string name="car_number">Car number</string>
    <string name="car_model_empty_error">Please enter car model</string>
    <string name="car_number_empty_error">Please enter car number</string>

    <!-- Bills history fragment -->
    <string name="bills_and_payments">Bills and payments</string>
    <string name="bill">Bill</string>
    <string name="unpaid_bills_count">Unpaid bills count: %d</string>
    <string name="all_bills_paid">Congratulations, all bills are paid</string>
    <string name="bills_history">Bills history</string>
    <string name="bills_number">Bill # %s from</string>
    <string name="bill_status_paid">Paid</string>
    <string name="bill_status_not_paid">Not paid</string>
    <string name="bill_status_in_progress">In progress</string>
    <string name="bill_total_rub">%d rub.</string>
    <string name="load_bill_history_error">Error loading bill history</string>
    <string name="bills_empty">No bills</string>

    <!-- Bill fragment -->
    <string name="bill_number">Bill # %s</string>
    <string name="status">Status:</string>
    <string name="bill_status_paid_details">Paid bill</string>
    <string name="bill_status_not_paid_details">Not paid bill</string>
    <string name="bill_status_in_progress_details">Bill in progress</string>
    <string name="date">Date:</string>
    <string name="bill_total">Total:</string>
    <string name="bill_title">Bill title:</string>
    <string name="bill_details">Bill details:</string>
    <string name="browser_not_installed">Browser not installed</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="view_bill">View bill:</string>

</resources>