<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_grey" />

    <TextView
        android:id="@+id/new_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <EditText
        android:id="@+id/feedback_title_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:hint="@string/feedback_title"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_feedback"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/feedback_content_input"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:hint="@string/feedback_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:singleLine="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_title_input"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/add_files"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/add_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_content_input" />

</androidx.constraintlayout.widget.ConstraintLayout>