<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bill_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Счет № 111" />

    <TextView
        android:id="@+id/bill_status_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/status"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_number" />

    <TextView
        android:id="@+id/bill_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/half_layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_status_label"
        tools:text="@string/bill_status_paid_details" />

    <TextView
        android:id="@+id/bill_date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_status" />

    <TextView
        android:id="@+id/bill_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/half_layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_date_label"
        tools:text="2021.03.23" />

    <TextView
        android:id="@+id/bill_total_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/bill_total"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_date" />

    <TextView
        android:id="@+id/bill_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/half_layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_total_label"
        tools:text="1000 Р." />

    <TextView
        android:id="@+id/bill_title_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/bill_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_total" />

    <TextView
        android:id="@+id/bill_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/half_layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_title_label"
        tools:text="@string/bill_title" />

    <TextView
        android:id="@+id/bill_details_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/bill_details"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_title" />

    <TextView
        android:id="@+id/bill_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/half_layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_details_label"
        tools:text="Bill_details.pdf" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bill_payment_button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/proceed_to_payment"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_details"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>