<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/choose_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/layout_margin"
        android:text="@string/choose_section"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/request_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="32dp"
        android:text="@string/management_company_requests"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_section" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/security_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/half_layout_margin"
        android:layout_marginEnd="32dp"
        android:text="@string/pass_and_security"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payments_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/half_layout_margin"
        android:layout_marginEnd="32dp"
        android:text="@string/payments"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/security_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:text="@string/copyright"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>