<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_grey" />

        <TextView
            android:id="@+id/get_car_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button" />

        <EditText
            android:id="@+id/car_model_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:hint="@string/car_model"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_car_pass"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/car_number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:hint="@string/car_number"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_model_input"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/car_pass_date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/visit_date"
            android:inputType="date"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_number_input"
            tools:ignore="Autofill" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/car_pass_access_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/layout_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_pass_date_input">

            <TextView
                android:id="@+id/car_pass_access_type_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/access_type"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/car_pass_access_type_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/access_type" />

            <ImageView
                android:id="@+id/car_pass_access_type_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/car_pass_access_type_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/car_pass_access_type_name"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/half_layout_margin"
                android:background="@color/md_grey_600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_pass_access_type_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/car_pass_send_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/send"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_pass_access_type" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/car_pass_send_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_pass_send_button"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_wave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>