<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_grey" />

        <TextView
            android:id="@+id/get_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/service_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_service">

            <TextView
                android:id="@+id/service_type_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/choose_service_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/choose_service" />

            <ImageView
                android:id="@+id/choose_service_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/service_type_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/service_type_name"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/half_layout_margin"
                android:background="@color/md_grey_600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_type_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/service_comment_input"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:hint="@string/write_comment_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:singleLine="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_type"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/add_files_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:text="@string/add_files"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_comment_input" />

        <ImageView
            android:id="@+id/add_files_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_files_label"
            app:srcCompat="@drawable/ic_add_black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/files_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_files_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/service_send_button"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="32dp"
            android:text="@string/send"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/files_list" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/service_send_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_send_button"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_wave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>